- added raw edit feature

--- a/main.html
+++ b/main.html
@@ -97,6 +97,7 @@
             <div class="row id clear">
                 <span class="key"><%= field.key %></span> &nbsp;&nbsp;| &nbsp;&nbsp;<%= field.value.idString %>
                 <a href="#" class="edit-raw pull-right">{ JSON }</a>
+                <a href="#" class="save-raw pull-right hide" style="margin-right: 10px">{ SAVE CHANGES }</a>
             </div>
         <% }else { %>
             <div class="row clear editableRow">
