--- a/main.html
+++ b/main.html
@@ -10,13 +10,13 @@
 <body ontouchstart class="clear md-mode">
   <div class="container">
     <div id="sidebar" class="column animate">
-      <div class="logo pull-left clear"><h2>MongoMan <span>v0.0.1</span></h2></div>
+      <div class="logo pull-left clear"><h2>MongoCMS <span>v0.0.1</span></h2></div>
       <ul class="clear documents">
         <li><a href="#">
             <p>769768544563783</p><span class="published pull-left">2 months ago</span><span class="views pull-right"><i class="fa fa-eye"></i>200</span></a></li>
       </ul>
       <div class="add-new-doc text-center"><i class="fa">+</i></div>
-      <footer class="clear text-center">&copy; 2013<br>Powered by Node-Webkit</footer>
+      <footer class="clear text-center">&copy; 2014<br>Powered by Node-Webkit</footer>
     </div>
     <div id="main" class="column">
       <header class="clear">
@@ -96,8 +96,10 @@
         <% if( field.key == '_id') { %>
             <div class="row id clear">
                 <span class="key"><%= field.key %></span> &nbsp;&nbsp;| &nbsp;&nbsp;<%= field.value.idString %>
-                <a href="#" class="edit-raw pull-right">{ JSON }</a>
-                <a href="#" class="save-raw pull-right hide" style="margin-right: 10px">{ SAVE CHANGES }</a>
+                <ul id="edit-controls">
+                    <li><a href="#" class="edit-raw pull-right"><i class="fa fa-code"></i></a></li>
+                    <li><a href="#" class="save-raw pull-right hide"><i class="fa fa-floppy-o"></i></a></li>
+                </ul>
             </div>
         <% }else { %>
             <div class="row clear editableRow">
