- Using save instead of update to make changes - Simplified active logic for showing active model - added copy, cut, paste shortcuts to node webkit (this should be default) - updated some packages

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body ontouchstart class="clear md-mode">
   <div class="container">
     <div id="sidebar" class="column animate">
-      <div class="logo pull-left clear"><h2>MongoCMS <span>v0.0.1</span></h2></div>
+      <div class="logo pull-left clear"><h2>MongoCMS <span>v0.0.3</span></h2></div>
       <ul class="clear documents">
         <li><a href="#">
             <p>769768544563783</p><span class="published pull-left">2 months ago</span><span class="views pull-right"><i class="fa fa-eye"></i>200</span></a></li>
@@ -144,6 +144,7 @@
   <script src="components/nprogress/nprogress.js"></script>
   <script src="components/floatLabel/jquery.FloatLabel.js"></script>
   <script src="components/ace-builds/src-noconflict/ace.js"></script>
+  <script src="components/keymaster/keymaster.js"></script>
   <script src="js/namespaces.js"></script>
   <script src="js/helpers.js"></script>
   <script src="js/main.js"></script>
