Finally feels stable.. Fixed a bunch of state issues with the UI.. Changed db architecture.

--- a/main.html
+++ b/main.html
@@ -95,7 +95,7 @@
     
         <% if( field.key == '_id') { %>
             <div class="row id clear">
-                <span class="key"><%= field.key %></span> &nbsp;&nbsp;| &nbsp;&nbsp;<%= field.value.idString %>
+                <span class="key"><%= field.key %></span> &nbsp;&nbsp;| &nbsp;&nbsp;<%= field.value %>
                 <ul id="edit-controls">
                     <li><a href="#" class="edit-raw pull-right"><i class="fa fa-code"></i></a></li>
                     <li><a href="#" class="save-raw pull-right hide"><i class="fa fa-floppy-o"></i></a></li>
