added auto update feature more build improvements lots of cleanup

--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MongoCMS v0.0.3</title>
+    <title>MongoCMS v0.0.4</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="css/main.css">
@@ -36,7 +36,7 @@
 <body ontouchstart class="clear md-mode">
   <div class="container">
     <div id="sidebar" class="column animate">
-      <div class="logo pull-left clear"><h2>MongoCMS <span>v0.0.3</span></h2></div>
+      <div class="logo pull-left clear"><h2>MongoCMS <span>v0.0.4</span></h2></div>
       <ul class="clear documents">
         <li><a href="#">
             <p>769768544563783</p><span class="published pull-left">2 months ago</span><span class="views pull-right"><i class="fa fa-eye"></i>200</span></a></li>
@@ -87,7 +87,7 @@
           <input type="password" name="psw">
         </div>
         <button type="submit" class="btn center connect">Connect</button>
-        <p class="version"></p>
+        <p class="version">v0.0.4</p>
       </div>
       <div class="select-collection-pane hide">
         <p style="margin-bottom: 10px; font-weight: bold;" class="text-center title clear flat-green">Conected!</p>
@@ -97,6 +97,9 @@
       </div>
     </form>
   </div><span class="md-overlay-x hide">X</span>
+  <div class="notification-bar hide">
+    <div class="message"><b>Update Available:</b> <a href="#">Click here</a> to upgrade to the latest version of MongoCMS. Restart Required.<a href="#" class="close-btn">X</a></div>
+  </div>
   <script type="text/template" id="startPageTemplate">
     <p>Documentation coming soon...</p>
     <p class="x-small">WARNING: This is a "pre-alpha" release. Please backup your data before using MongoCMS.</p>
